KCal::Event::dtEnd() is inclusive, not exclusive.

This is an important detail for all-day events.
BUG: 252568

svn path=/trunk/extragear/pim/googledata/; revision=1216148